WC2 = WooCommerce 2 (wordt niet meer ondersteund vanaf onze versie 5.5.2)

6.3.5 (2021-11-??)
------------------
Bugs:
- WC|MA (and maybe others): een factuur met verlegde btw en gratis verzending
  levert een waarschuwing en dus een conceptfactuur op omdat ten onrechte het
  `standaard btw-tarief van verzendkosten aan de gratis verzending word
  toegekend ipv 0%.

Refactorings:
- WC: de method WC_Logger::add() is deprecated. Onze log helper is hier op
  aangepast Zichtbaar gevolg: dedatum wordt nu in de ISO standaard afgedrukt.

6.3.4 (2021-10-22)
------------------
Bugs:
- WC: Error on php 8: Uncaught TypeError: Unsupported operand types: string /
  int in .../Creator.php:429 with free shipping or in-store pickup.

6.3.3 (2021-09-23)
------------------
Bugs:
- WC: Regression: the solution regarding the problem with our "please rate our
  plugin" message introduced another error in the "invoice status overview box"
  with as result that it did no longer auto-load the actual content.
- WC: Notice: undefined index 'class' ...
- ALL: Message "Bedankt voor het beoordelen van de Acumulus plugin/module"
  verscheen 2 keer.

6.3.2 (2021-09-21)
------------------
Bugs:
- ALL: Invoice status overview: Acumulus no longer distinguishes between dutch
  and EU vat. As a result, the amounts in the get_entry API call changed,
  leading to warnings about incorrect vat and amount ex vat.
- ALL: ajax event handlers where not refreshed after an ajax (partial) page
  refresh.
- WC: The html for our "please rate our plugin" message triggered WP to move our
  message above the title "Dashboard", leading to our js no longer reacting
  correctly to the "No thanks" button.
- PS: 1.7.7.0 introduced new hooks to add content to the order view page. As a
  result, our status invoice overview was no longer shown.
- ALL: Non-expanded %-code in help text in Configuration form.
- ALL: Verwijzing naar "Electronische diensten in de EU" gewijzigd in
  "Buitenlandse (EU) btw".

6.3.1 (2021-07-27)